--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-96013185-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
         <meta charset="utf-8">
         
     </head>
@@ -44,14 +54,39 @@
 }
 
 
+.header{
+    position: absolute;
+    font: 35px Helvetica Neue;
+    font-weight: bold;
+    margin-left:100px
+
+}
+
+.text{
+ width: 860px;   
+ margin-left:100px;
+ margin-top:20px;
+ font: 14px Helvetica Neue;
+ line-height: 120%;
+}
+
 
 </style>    
 <body>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<div class="header">Interaktiv graf över Systembolagets statistik 2016</div>
+<div class="graph"></div>
+<div class="text">En grafisk sammanställning över Systembolagets öppna försäljningsstatistik 2016 som finns <a href="https://www.systembolaget.se/om-systembolaget/om-foretaget/forsaljningsstatistik/">här</a>. 
+Grafen visar totalt antal sålda av en viss vara i förhållande till pris eller 
+<a href="https://sv.wikipedia.org/wiki/Alkohol_per_krona">APK (Alkohol Per Krona)</a><br/>
+<b>Instruktioner:</b><br/>
+Klicka färgrutan eller texten på den kategorin du vill visa/dölja<br/>
+Klicka på "APK" eller "Pris" för att växla mellan Pris och APK på horisontella axeln.
+<br/>
+<br/>
+Koden baseras på D3.js v4 och finns tillgänglig på <a href="https://github.com/granstubbe/dryck-plot">GitHub</a>
 
-
-
-
+</div>
 <script src="main.js"></script> 
 </body>    
            
