--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ Grafen visar totalt antal sålda av en viss vara i förhållande till pris eller
 <a href="https://sv.wikipedia.org/wiki/Alkohol_per_krona">APK (Alkohol Per Krona)</a><br/>
 <b>Instruktioner:</b><br/>
 Klicka färgrutan eller texten på den kategorin du vill visa/dölja<br/>
-Klicka på "APK" eller "Pris" för att växla mellan Pris och APK på horisontella axeln.
+Klicka på "APK" eller "Pris" för att växla mellan Pris och APK på horisontella axeln.<br/>
+Håll musen över valfri punkt för att se vilken dryck den tillhör
 <br/>
 <br/>
 Koden baseras på D3.js v4 och finns tillgänglig på <a href="https://github.com/granstubbe/dryck-plot">GitHub</a>
