Minor fixes again

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div class="header">Interaktiv graf över Systembolagets statistik 2016</div>
 <div class="graph"></div>
 <div class="text">En grafisk sammanställning över Systembolagets öppna försäljningsstatistik 2016 som finns <a href="https://www.systembolaget.se/om-systembolaget/om-foretaget/forsaljningsstatistik/">här</a>. 
-Grafen visar totalt antal sålda av en viss vara i förhållande till pris eller 
+Grafen (log-log plot) visar hur vi svenskar konsumerade alkohol 2016 i förhållande till sitt pris. Slutsatserna får ni dra själva men billigt säljer bra, och alkohol är inget undantag. 
 <a href="https://sv.wikipedia.org/wiki/Alkohol_per_krona">APK (Alkohol Per Krona)</a><br/>
 <b>Instruktioner:</b><br/>
 Klicka färgrutan eller texten på den kategorin du vill visa/dölja<br/>
