--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 <body>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <div id="intro">Välj något att visa till höger!</div>
-<div class="header">Interaktiv graf över Systembolagets statistik 2016</div>
+<div class="header">Sveriges alkoholpreferenser 2016</div>
 <div class="graph"></div>
-<div class="text">En grafisk sammanställning över Systembolagets öppna försäljningsstatistik 2016 som finns <a href="https://www.systembolaget.se/om-systembolaget/om-foretaget/forsaljningsstatistik/">här</a>. 
+<div class="text">En grafisk sammanställning baserad på Systembolagets öppna försäljningsstatistik 2016 som finns <a href="https://www.systembolaget.se/om-systembolaget/om-foretaget/forsaljningsstatistik/">här</a>. 
 Grafen (log-log plot) visar hur vi svenskar konsumerade alkohol 2016 i förhållande till sitt pris. Slutsatserna får ni dra själva men billigt säljer bra, och alkohol är inget undantag.<br/> 
 Välj mellan att visa priset i totalt antal kronor eller i <a href="https://sv.wikipedia.org/wiki/Alkohol_per_krona">APK (Alkohol Per Krona)</a>
 <br/>
