--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <body>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <div id="intro">Välj något att visa till höger!</div>
-<div class="header">Sveriges alkoholpreferenser 2016</div>
+<div class="header">Visualisering av Sveriges alkoholpreferenser 2016</div>
 <div class="graph"></div>
 <div class="text">En grafisk sammanställning baserad på Systembolagets öppna försäljningsstatistik 2016 som finns <a href="https://www.systembolaget.se/om-systembolaget/om-foretaget/forsaljningsstatistik/">här</a>. 
 Grafen (log-log plot) visar hur vi svenskar konsumerade alkohol 2016 i förhållande till sitt pris. Slutsatserna får ni dra själva men billigt säljer bra, och alkohol är inget undantag.<br/> 
