--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 
 .legendTitle{
     position: absolute;
+    width:200px;
     
 }
 
@@ -56,10 +57,11 @@
 
 
 .header{
+    width:1000px;
     position: absolute;
     font: 35px Helvetica Neue;
     font-weight: bold;
-    margin-left:100px
+    margin-left:100px;
 
 }
 
@@ -90,6 +92,12 @@
     justify-content: center;
 }
 
+.graph{
+position: relative;
+
+
+}
+
 
 </style>    
 <body>
@@ -109,6 +117,8 @@ Håll musen över valfri punkt för att se vilken dryck den tillhör
 <br/>
 <br/>
 Koden baseras på D3.js v4 och finns tillgänglig på <a href="https://github.com/granstubbe/dryck-plot">GitHub</a>
+<br/>
+Fungerar bäst på större skärmar...
 
 </div>
 <script src="main.js"></script> 
