--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   ga('send', 'pageview');
 
 </script>
+    <meta property="og:title" content="Dryck-plot" />
+    <meta property="og:url" content="https://granstubbe.github.io/dryck-plot/" />
+    <meta property="og:image" content="http://granstubbe.github.io/dryck-plot/src/image.png" />
         
     <base target="_blank">  
     <title>Dryck-plot</title>
