Added sales per liter and minor bug fix

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ Välj mellan att visa priset i totalt antal kronor eller i <a href="https://sv.w
 <b>Instruktioner:</b><br/>
 Klicka färgrutan eller texten på den kategorin du vill visa/dölja<br/>
 Klicka på "APK" eller "Pris" för att växla mellan Pris och APK på horisontella axeln.<br/>
+Klicka på "Liter" eller "Totalt" för att växla mellan att visa antal sålda liter eller antal sålda enheter på vertikala axeln<br/>
 Håll musen över valfri punkt för att se vilken dryck den tillhör
 <br/>
 <br/>
