--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   ga('send', 'pageview');
 
 </script>
-    <meta property="og:title" content="Visualisering av svenskars dryckesvanor" />
-    <meta property="og:type" content="website"/>
-    <meta property="og:image" content="http://granstubbe.github.io/dryck-plot/src/image.png" />
-    <meta property="og:url" content="https://granstubbe.github.io/dryck-plot/" />
-    <meta property="og:description" content="En visualisering av Sveriges alkoholpreferenser 2016, ett interaktivt diagram som visar vad och hur mycket vi köpte av olika drycker på systembolaget förra året" />
+    <meta property="og:title" content="Visualisering av svenskars dryckesvanor">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http://granstubbe.github.io/dryck-plot/src/image.jpg">
+    <meta property="og:url" content="https://granstubbe.github.io/dryck-plot/">
+    <meta property="og:description" content="En visualisering av Sveriges alkoholpreferenser 2016, ett interaktivt diagram som visar vad och hur mycket vi köpte av olika drycker på systembolaget förra året">
         
     <base target="_blank">  
     <title>Dryck-plot</title>
